--- a/venta/index.html
+++ b/venta/index.html
@@ -20,213 +20,222 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
-
 </head>
 
 <body>
 
+
   <div class="page-wrap">
 
     <header class="site-header">
-
       <h1><b>NOS MUDAMOS y VENDEMOS TODO !!!</b></h1>
-
     </header>
 
-    <section class="main-content">
 
-      <article class="module module-third module-kiwi">
-        <img src="images/9_pistas.jpeg" alt="">
-        <div class="space">
-          <h2>9 pistas - Piensa rapido y descubre el misterio</h2>
-	  <p>Precio: <b>$ 1.700</b><br>
-	  Entrega: Inmediata</p>
-        </div>
-      </article>
+       <section id="juegos">
 
-      <article class="module module-third module-kiwi">
-        <img src="images/arma_mec.jpeg" alt="">
-        <div class="space">
-          <h2>ARMAMEC CONCEPT 8 - 230 piezas</h2>
-          <p>Precio: <b>$ 5.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/9_pistas.jpeg" alt="">
+          <div class="space">
+            <h2>9 pistas - Piensa rapido y descubre el misterio</h2>
+            <p>Precio: <b>$ 1.700</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/blocky_piratas.jpeg" alt="">
-        <div class="space">
-          <h2>BLOCKY PIRATAS - 100 Pcs - 01-0637</h2>
-          <p>Precio: <b>$ 1.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/arma_mec.jpeg" alt="">
+          <div class="space">
+            <h2>ARMAMEC CONCEPT 8 - 230 piezas</h2>
+            <p>Precio: <b>$ 5.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/camarero.jpeg" alt="">
-        <div class="space">
-          <h2>EL CAMARERO - Un juego de Maldon</h2>
-          <p>Precio: <b>$ 3.500</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/blocky_piratas.jpeg" alt="">
+          <div class="space">
+            <h2>BLOCKY PIRATAS - 100 Pcs - 01-0637</h2>
+            <p>Precio: <b>$ 1.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/chanchitos.jpeg" alt="">
-        <div class="space">
-          <h2>LOS CHANCHITOS CONSTRUCTORES</h2>
-          <p>Precio: <b>$ 2.500</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/camarero.jpeg" alt="">
+          <div class="space">
+            <h2>EL CAMARERO - Un juego de Maldon</h2>
+            <p>Precio: <b>$ 3.500</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/lego_city.jpeg" alt="">
-        <div class="space">
-          <h2>LEGO CITY - Police - 80 piezas - Starter Set 60136 Building Kit</h2>
-          <p>Precio: <b>$ 8.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/chanchitos.jpeg" alt="">
+          <div class="space">
+            <h2>LOS CHANCHITOS CONSTRUCTORES</h2>
+            <p>Precio: <b>$ 2.500</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/te_conozco.jpeg" alt="">
-        <div class="space">
-          <h2>TE CONOZCO? - ¿cuales son tus verdaderos colores? - SELLADO - SIN USO</h2>
-          <p>Precio: <b>$ 2.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/lego_city.jpeg" alt="">
+          <div class="space">
+            <h2>LEGO CITY - Police - 80 piezas - Starter Set 60136 Building Kit</h2>
+            <p>Precio: <b>$ 8.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/zanahorias.jpeg" alt="">
-        <div class="space">
-          <h2>ZANAHORIAS - Mi primer juego de suma y resta</h2>
-          <p>Precio: <b>$ 1.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/te_conozco.jpeg" alt="">
+          <div class="space">
+            <h2>TE CONOZCO? - ¿cuales son tus verdaderos colores? - SELLADO - SIN USO</h2>
+            <p>Precio: <b>$ 2.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/plato_giratorio.jpeg" alt="">
-        <div class="space">
-          <h2>PLATO DE PRESENTACION GIRATORIO PARA TORTA - 35cm</h2>
-          <p>Precio: <b>$ 3.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/bici_grande_1.jpeg" alt="">
+          <div class="space">
+            <h2>Bicicleta Rodado 24 - Negra y Verde - Olmo Mint</h2>
+            <p>Precio: <b>$ 50.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/sandwichera.jpeg" alt="">
-        <div class="space">
-          <h2>SANDWICHERA PHILIPS - Con superficie antiadherente - 700w</h2>
-          <p>Precio: <b>$ 4.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/zanahorias.jpeg" alt="">
+          <div class="space">
+            <h2>ZANAHORIAS - Mi primer juego de suma y resta</h2>
+            <p>Precio: <b>$ 1.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/vajilla_china.jpeg" alt="">
-        <div class="space">
-          <h2>VAJILLA CHINA DE PORCELANA</h2>
-          <p>Precio: <b>$ 5.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/bici_chica_1.jpeg" alt="">
+          <div class="space">
+            <h2>Bicicleta Rodado 16 - Azul - Reynolds - Triban</h2>
+            <p>Precio: <b>$ 13.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/vasos_durax.jpeg" alt="">
-        <div class="space">
-          <h2>VASOS DURAX - 6 UNIDADES</h2>
-          <p>Precio: <b>$ 1.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/monopatin_1.jpeg" alt="">
+          <div class="space">
+            <h2>Monopatin Sieteveinte Glow - Metalico</h2>
+            <p>Precio: <b>$ 9.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/bici_grande_1.jpeg" alt="">
-        <div class="space">
-          <h2>Bicicleta Rodado 24 - Negra y Verde - Olmo Mint</h2>
-          <p>Precio: <b>$ 50.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/skate_1.jpeg" alt="">
+          <div class="space">
+            <h2>Skate - 59cm x 15cm - Sin Lija - Hasta 45kg</h2>
+            <p>Precio: <b>$ 1.500</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/bici_chica_1.jpeg" alt="">
-        <div class="space">
-          <h2>Bicicleta Rodado 16 - Azul - Reynolds - Triban</h2>
-          <p>Precio: <b>$ 13.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+      </section>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/balanza_1.jpeg" alt="">
-        <div class="space">
-          <h2>Balanza Personal - NICTOM - Conexion a Smartphone</h2>
-          <p>Precio: <b>$ 2.500</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/monopatin_1.jpeg" alt="">
-        <div class="space">
-          <h2>Monopatin Sieteveinte Glow - Metalico</h2>
-          <p>Precio: <b>$ 9.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/pastalinda_1.jpeg" alt="">
-        <div class="space">
-          <h2>Pastalinda - Fabrica de Pasta - Morris - MO-013</h2>
-          <p>Precio: <b>$ 5.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+       <section id="cocina">
 
-      <article class="module module-third module-kiwi">
-        <img src="images/ps5.jpeg" alt="">
-        <div class="space">
-          <h2>Sony PS5 Standard (CFI-1115A) + Joystick inalámbrico Sony PlayStation DualSense Original Galactic Purple (CFI-ZCT1)</h2>
-          <p>NOTA: Son 2 controles, el original mas uno extra Galactic Purple<br>
-          <p>Precio: <b>$ 280.000</b><br>
-          <p>Menos de 1 anio desde la compra<br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/plato_giratorio.jpeg" alt="">
+          <div class="space">
+            <h2>PLATO DE PRESENTACION GIRATORIO PARA TORTA - 35cm</h2>
+            <p>Precio: <b>$ 3.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/skate_1.jpeg" alt="">
-        <div class="space">
-          <h2>Skate - 59cm x 15cm - Sin Lija - Hasta 45kg</h2>
-          <p>Precio: <b>$ 1.500</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/sandwichera.jpeg" alt="">
+          <div class="space">
+            <h2>SANDWICHERA PHILIPS - Con superficie antiadherente - 700w</h2>
+            <p>Precio: <b>$ 4.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/tv24_1.jpeg" alt="">
-        <div class="space">
-          <h2>TV Sanyo LCD 24" - LCD-24XH7</h2>
-          <p>Precio: <b>$ 24.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/vajilla_china.jpeg" alt="">
+          <div class="space">
+            <h2>VAJILLA CHINA DE PORCELANA</h2>
+            <p>Precio: <b>$ 5.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-      <article class="module module-third module-kiwi">
-        <img src="images/tv42_1.jpeg" alt="">
-        <div class="space">
-          <h2>TV Philips 42" LCD - 42PFL3403/77</h2>
-          <p>Precio: <b>$ 35.000</b><br>
-          Entrega: Inmediata</p>
-        </div>
-      </article>
+        <article class="module module-third module-kiwi">
+          <img src="images/vasos_durax.jpeg" alt="">
+          <div class="space">
+            <h2>VASOS DURAX - 6 UNIDADES</h2>
+            <p>Precio: <b>$ 1.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
 
-    </section>
+        <article class="module module-third module-kiwi">
+          <img src="images/pastalinda_1.jpeg" alt="">
+          <div class="space">
+            <h2>Pastalinda - Fabrica de Pasta - Morris - MO-013</h2>
+            <p>Precio: <b>$ 5.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
+
+        <article class="module module-third module-kiwi">
+          <img src="images/balanza_1.jpeg" alt="">
+          <div class="space">
+            <h2>Balanza Personal - NICTOM - Conexion a Smartphone</h2>
+            <p>Precio: <b>$ 2.500</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
+
+      </section>
+
+      <section id="tecnologia">
+
+        <article class="module module-third module-kiwi">
+          <img src="images/ps5.jpeg" alt="">
+          <div class="space">
+            <h2>Sony PS5 Standard (CFI-1115A) + Joystick inalámbrico Sony PlayStation DualSense Original Galactic Purple (CFI-ZCT1)</h2>
+            <p>NOTA: Son 2 controles, el original mas uno extra Galactic Purple<br>
+            <p>Precio: <b>$ 280.000</b><br>
+            <p>Menos de 1 anio desde la compra<br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
+
+        <article class="module module-third module-kiwi">
+          <img src="images/tv24_1.jpeg" alt="">
+          <div class="space">
+            <h2>TV Sanyo LCD 24" - LCD-24XH7</h2>
+            <p>Precio: <b>$ 24.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
+
+        <article class="module module-third module-kiwi">
+          <img src="images/tv42_1.jpeg" alt="">
+          <div class="space">
+            <h2>TV Philips 42" LCD - 42PFL3403/77</h2>
+            <p>Precio: <b>$ 35.000</b><br>
+            Entrega: Inmediata</p>
+          </div>
+        </article>
+
+      </section>
 
   </div>
 
