Change entrega ps5

--- a/venta/index.html
+++ b/venta/index.html
@@ -213,7 +213,7 @@
             <p>NOTA: Son 2 controles, el original mas uno extra Galactic Purple<br>
             <p>Precio: <b>$ 280.000</b><br>
             <p>Menos de 1 anio desde la compra<br>
-            Entrega: Inmediata</p>
+            Entrega: Agosto 2023</p>
           </div>
         </article>
 
