--- a/venta/index.html
+++ b/venta/index.html
@@ -188,7 +188,7 @@
           <img src="images/pastalinda_1.jpeg" alt="">
           <div class="space">
             <h2>Pastalinda - Fabrica de Pasta - Morris - MO-013</h2>
-            <p>Precio: <b>$ 5.000</b><br>
+            <p>Precio: <b><s>$ 5.000</s> VENDIDA</b><br>
             Entrega: Inmediata</p>
           </div>
         </article>
