Fix Smart TV image path

--- a/venta/index_2.html
+++ b/venta/index_2.html
@@ -273,7 +273,7 @@
         </article>
 
         <article class="module module-third module-kiwi">
-          <img src="images/tv42_1.jpeg" alt="">
+          <img src="images/samsung_50.jpg" alt="">
           <div class="space">
             <h2>TV Samsung 4k 50" Smart Serie 6 - UN50MU6100GCDF</h2>
             <p>Precio: <b>$ 110.000</b><br>
@@ -282,7 +282,7 @@
         </article>
 	      
         <article class="module module-third module-kiwi">
-          <img src="images/tv42_1.jpeg" alt="">
+          <img src="images/lg_oled_55.jpg" alt="">
           <div class="space">
             <h2>TV LG OLED AI ThinQ 4k 55" Smart - OLED55BXPSA</h2>
             <p>Precio: <b>$ 400.000</b><br>
