--- a/venta/index_2.html
+++ b/venta/index_2.html
@@ -205,7 +205,7 @@
         <article class="module module-third module-kiwi">
           <img src="images/provolera.jpeg" alt="">
           <div class="space">
-            <h2>Provolera de cerámitca - para microondas</h2>
+            <h2>Provoletera de cerámica - para microondas</h2>
             <p>Precio: <b>$ 2.800</b><br>
             Disponible: Inmediato</p>
           </div>
@@ -297,9 +297,6 @@
       </section>
 
 
-	  
-	  
-	  
   </div>
 
   <script type="text/javascript">
