Improve HTML main file

--- a/venta/index_2.html
+++ b/venta/index_2.html
@@ -46,7 +46,7 @@
         <article class="module module-third module-kiwi">
           <img src="images/arma_mec.jpeg" alt="">
           <div class="space">
-            <h2>ARMAMEC CONCEPT 8 - 230 piezas</h2>
+            <h2>Armamec concept 8 - 230 piezas</h2>
             <p>Precio: <b>$ 5.000</b><br>
             Disponible: Inmediato</p>
           </div>
@@ -55,7 +55,7 @@
         <article class="module module-third module-kiwi">
           <img src="images/blocky_piratas.jpeg" alt="">
           <div class="space">
-            <h2>BLOCKY PIRATAS - 100 Pcs - 01-0637</h2>
+            <h2>Blocky Piratas - 100 Pcs - 01-0637</h2>
             <p>Precio: <b>$ 1.000</b><br>
             Disponible: Inmediato</p>
           </div>
@@ -64,7 +64,7 @@
         <article class="module module-third module-kiwi">
           <img src="images/camarero.jpeg" alt="">
           <div class="space">
-            <h2>EL CAMARERO - Un juego de Maldon</h2>
+            <h2>El Camarero - Un juego de Maldon</h2>
             <p>Precio: <b>$ 3.500</b><br>
             Disponible: Inmediato</p>
           </div>
@@ -73,7 +73,7 @@
         <article class="module module-third module-kiwi">
           <img src="images/chanchitos.jpeg" alt="">
           <div class="space">
-            <h2>LOS CHANCHITOS CONSTRUCTORES</h2>
+            <h2>Los Chanchitos Constructores</h2>
             <p>Precio: <b>$ 2.500</b><br>
             Disponible: Inmediato</p>
           </div>
@@ -91,7 +91,7 @@
         <article class="module module-third module-kiwi">
           <img src="images/te_conozco.jpeg" alt="">
           <div class="space">
-            <h2>TE CONOZCO? - ¿cuales son tus verdaderos colores? - SELLADO - SIN USO</h2>
+            <h2>Te Conozco? - ¿cuales son tus verdaderos colores? - SELLADO - SIN USO</h2>
             <p>Precio: <b>$ 2.000</b><br>
             Disponible: Inmediato</p>
           </div>
@@ -109,7 +109,7 @@
         <article class="module module-third module-kiwi">
           <img src="images/zanahorias.jpeg" alt="">
           <div class="space">
-            <h2>ZANAHORIAS - Mi primer juego de suma y resta</h2>
+            <h2>Zanahorias - Mi primer juego de suma y resta</h2>
             <p>Precio: <b>$ 1.000</b><br>
             Disponible: Inmediato</p>
           </div>
@@ -151,7 +151,7 @@
         <article class="module module-third module-kiwi">
           <img src="images/plato_giratorio.jpeg" alt="">
           <div class="space">
-            <h2>PLATO DE PRESENTACION GIRATORIO PARA TORTA - 35cm</h2>
+            <h2>Plato de Presentación Giratorio para Torta - 35cm</h2>
             <p>Precio: <b>$ 3.000</b><br>
             Disponible: Inmediato</p>
           </div>
@@ -160,7 +160,7 @@
         <article class="module module-third module-kiwi">
           <img src="images/sandwichera.jpeg" alt="">
           <div class="space">
-            <h2>SANDWICHERA PHILIPS - Con superficie antiadherente - 700w</h2>
+            <h2>Sandwichera Phillips - Con superficie antiadherente - 700w</h2>
             <p>Precio: <b>$ 4.000</b><br>
             Disponible: Inmediato</p>
           </div>
@@ -169,7 +169,7 @@
         <article class="module module-third module-kiwi">
           <img src="images/vajilla_china.jpeg" alt="">
           <div class="space">
-            <h2>VAJILLA CHINA DE PORCELANA</h2>
+            <h2>Vajilla China de Porcelana</h2>
             <p>Precio: <b>$ 5.000</b><br>
             Disponible: Inmediato</p>
           </div>
@@ -178,7 +178,7 @@
         <article class="module module-third module-kiwi">
           <img src="images/vasos_durax.jpeg" alt="">
           <div class="space">
-            <h2>VASOS DURAX - 6 UNIDADES</h2>
+            <h2>Vasos Durax - 6 unidades</h2>
             <p>Precio: <b>$ 1.000</b><br>
             Disponible: Inmediato</p>
           </div>
@@ -224,7 +224,7 @@
           <img src="images/heladera.jpeg" alt="">
           <div class="space">
             <h2>Heladera  con freezer superior Twin Cooling Plus - Samsung - 382L Total - 89L Freezer - RT38K593SL</h2>
-            <p>Precio: <b>$ $ 180.000</b><br>
+            <p>Precio: <b>$ 180.000</b><br>
             Disponible: Junio
 			<a href="https://www.samsung.com/ar/refrigerators/top-mount-freezer/refrigerator-382l-silver-rt38k5932sl-b3/">Mas información</a></p>
           </div>
