--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=https://kurumor.github.io/venta/">
+        <script type="text/javascript">
+            window.location.href = "https://kurumor.github.io/venta/"
+        </script>
+        <title>Vendemos todo por mudanza</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='https://kurumor.github.io/venta/'>link</a>.
+    </body>
+</html>
