--- a/venta/index.html
+++ b/venta/index.html
@@ -54,7 +54,7 @@
 
     <div id="technology" class="section">
 
-      <h2 style="color: blue">Tecnología y muebles</span>
+      <h2 style="color: blue">Tecnología y muebles</h2>
       <hr class="solid">
 
       <div class="tiles">
@@ -165,7 +165,7 @@
 
     <div id="kitchen" class="section">
 
-      <h2 style="color: blue">Cocina</span>
+      <h2 style="color: blue">Cocina</h2>
       <hr class="solid">
 
       <div class="tiles">
@@ -353,7 +353,7 @@
 
     <div id="toys" class="section">
 
-      <h2 style="color: blue">Juguetes y Rodados</span>
+      <h2 style="color: blue">Juguetes y Rodados</h2>
       <hr class="solid">
 
       <div class="tiles">
