--- a/venta/index.html
+++ b/venta/index.html
@@ -239,7 +239,7 @@
           <img src="images/tazas.jpeg" alt="">
           <div class="details">
             <span class="title">Tazas Cuadradas x 6 unidades + Tetera + Azucarera + Lechera</span>
-            <span class="info">Precio: <b>$ 9.000</b><br>
+            <span class="info">Precio: <b><s>$ 9.000</s> VENDIDAS</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -250,7 +250,7 @@
           <img src="images/copetineras_cuadradas.jpeg" alt="">
           <div class="details">
             <span class="title">Copetineras Cuadradas x 4 unidades</span>
-            <span class="info">Precio: <b>$ 3.000</b><br>
+            <span class="info">Precio: <b><s>$ 3.000</s> VENDIDAS</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -261,7 +261,7 @@
           <img src="images/copetineras_flor.jpeg" alt="">
           <div class="details">
             <span class="title">4 Copetineras en Flor</span>
-            <span class="info">Precio: <b>$ 3.000</b><br>
+            <span class="info">Precio: <b><s>$ 3.000</s> VENDIDAS</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
