--- a/venta/index.html
+++ b/venta/index.html
@@ -75,7 +75,7 @@
           <img src="images/tv24_1.jpeg" alt="">
           <div class="details">
             <span class="title">TV Sanyo LCD 24" - LCD-24XH7</span>
-            <span class="info">Precio: <b>$ 24.000</b><br>
+            <span class="info">Precio: <b><s>$ 24.000</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -97,7 +97,7 @@
           <img src="images/samsung_50.jpg" alt="">
           <div class="details">
             <span class="title">TV Samsung 4k 50" Smart Serie 6 - UN50MU6100GCDF</span>
-            <span class="info">Precio: <b>$ 110.000</b><br>
+            <span class="info">Precio: <b><s>$ 110.000</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -130,7 +130,7 @@
           <img src="images/balanza_1.jpeg" alt="">
           <div class="details">
             <span class="title">Balanza Personal - NICTOM - Conexion a Smartphone</span>
-            <span class="info">Precio: <b>$ 2.500</b><br>
+            <span class="info">Precio: <b><s>$ 2.500</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
