--- a/venta/index.html
+++ b/venta/index.html
@@ -438,7 +438,7 @@
           <img src="images/bici_grande_1.jpeg" alt="">
           <div class="details">
             <span class="title">Bicicleta Rodado 24 - Negra y Verde - Olmo Mint</span>
-            <span class="info">Precio: <b>$ 50.000</b><br>
+            <span class="info">Precio: <b><s>$ 50.000</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
