--- a/venta/index.html
+++ b/venta/index.html
@@ -74,7 +74,7 @@
 	<a class="tile" href="#">
           <img src="images/tv24_1.jpeg" alt="">
           <div class="details">
-            <span class="title">TV Sanyo LCD 24" - LCD-24XH7</span>
+            <span class="title">TV Sanyo LCD 24" (LCD-24XH7)</span>
             <span class="info">Precio: <b><s>$ 24.000</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
@@ -85,7 +85,7 @@
 	<a class="tile" href="#">
           <img src="images/tv42_1_sold.jpeg" alt="">
           <div class="details">
-            <span class="title">TV Philips 42" LCD HD - 42PFL3403/77</span>
+            <span class="title">TV Philips 42" LCD HD (42PFL3403/77)</span>
             <span class="info">Precio: <b><s>$ 35.000</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
@@ -96,7 +96,7 @@
 	<a class="tile" href="#">
           <img src="images/samsung_50.jpg" alt="">
           <div class="details">
-            <span class="title">TV Samsung 4k 50" Smart Serie 6 - UN50MU6100GCDF</span>
+            <span class="title">TV Samsung 4k 50" Smart Serie 6 (UN50MU6100GCDF)</span>
             <span class="info">Precio: <b><s>$ 110.000</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
@@ -107,7 +107,7 @@
 	<a class="tile" href="#">
           <img src="images/lg_oled_55.jpg" alt="">
           <div class="details">
-            <span class="title">TV LG OLED AI ThinQ 4k 55" Smart - OLED55BXPSA</span>
+            <span class="title">TV LG OLED AI ThinQ 4k 55" Smart (OLED55BXPSA)</span>
             <span class="info">Precio: <b>$ 390.000</b><br>
             Disponible: Inmediato</span>
           </div>
@@ -118,7 +118,7 @@
 	<a class="tile" href="#">
           <img src="images/heladera.jpeg" alt="">
           <div class="details">
-            <span class="title">Heladera  con freezer superior Twin Cooling Plus - Samsung - 382L Total - 89L Freezer - RT38K593SL</span>
+            <span class="title">Heladera  con freezer superior Twin Cooling Plus - Samsung - 382L Total - 89L Freezer (RT38K593SL)</span>
             <span class="info">Precio: <b>$ 180.000</b><br>
             Disponible: Junio</span>
           </div>
@@ -138,9 +138,42 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
+          <img src="images/perforadora.jpeg" alt="">
+          <div class="details">
+	    <span class="title">Taladro percutor destornillador inalambrico Bauker (CD120)</span>
+            <span class="info">Precio: <b>$ 23.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/gear_vr.jpeg" alt="">
+          <div class="details">
+            <span class="title">Samsung Oculus Gear VR - Compatible: S7, S7 edge, Note5, S6 edge+, S6, S6 edge (SM-R323)</span>
+            <span class="info">Precio: <b>$ 7.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/vitroconvector.jpg" alt="">
+          <div class="details">
+            <span class="title">Vitroconvector Calefactor eléctrico Peabody 2000W (PE-VC20B)</span>
+            <span class="info">Precio: <b>$ 15.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
           <img src="images/mesa_plegable.jpeg" alt="">
           <div class="details">
-            <span class="title">Mesa Plegable Porta Laptop - Desayuno</span>
+            <span class="title">Mesa Plegable Porta Laptop / Desayuno</span>
             <span class="info">Precio: <b>$ 5.000</b><br>
             Disponible: Inmediato</span>
           </div>
@@ -216,7 +249,7 @@
 	<a class="tile" href="#">
           <img src="images/pastalinda_1_sold.jpeg" alt="">
           <div class="details">
-            <span class="title">Pastalinda - Fabrica de Pasta - Morris - MO-013</span>
+            <span class="title">Pastalinda - Fabrica de Pasta - Morris (MO-013)</span>
             <span class="info">Precio: <b><s>$ 5.000</s> VENDIDA</b><br>
             Disponible: Inmediato</span>
           </div>
@@ -344,8 +377,6 @@
         </a>
       </div>
 
-
-
     </div>
 
 
@@ -382,7 +413,7 @@
 	<a class="tile" href="#">
           <img src="images/blocky_piratas.jpeg" alt="">
           <div class="details">
-            <span class="title">Blocky Piratas - 100 Pcs - 01-0637</span>
+            <span class="title">Blocky Piratas - 100 Pcs (01-0637)</span>
             <span class="info">Precio: <b>$ 1.000</b><br>
             Disponible: Inmediato</span>
           </div>
