Add link to sold images

--- a/venta/index.html
+++ b/venta/index.html
@@ -72,7 +72,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/tv24_1.jpeg" alt="">
+          <img src="images/tv24_1_sold.jpeg" alt="">
           <div class="details">
             <span class="title">TV Sanyo LCD 24" (LCD-24XH7)</span>
             <span class="info">Precio: <b><s>$ 24.000</s> VENDIDA</b><br>
@@ -94,7 +94,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/samsung_50.jpg" alt="">
+          <img src="images/samsung_50_sold.jpg" alt="">
           <div class="details">
             <span class="title">TV Samsung 4k 50" Smart Serie 6 (UN50MU6100GCDF)</span>
             <span class="info">Precio: <b><s>$ 110.000</s> VENDIDA</b><br>
@@ -127,7 +127,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/balanza_1.jpeg" alt="">
+          <img src="images/balanza_1_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Balanza Personal - NICTOM - Conexion a Smartphone</span>
             <span class="info">Precio: <b><s>$ 2.500</s> VENDIDA</b><br>
@@ -269,7 +269,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/tazas.jpeg" alt="">
+          <img src="images/tazas_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Tazas Cuadradas x 6 unidades + Tetera + Azucarera + Lechera</span>
             <span class="info">Precio: <b><s>$ 9.000</s> VENDIDAS</b><br>
@@ -280,7 +280,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/copetineras_cuadradas.jpeg" alt="">
+          <img src="images/copetineras_cuadradas_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Copetineras Cuadradas x 4 unidades</span>
             <span class="info">Precio: <b><s>$ 3.000</s> VENDIDAS</b><br>
@@ -291,7 +291,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/copetineras_flor.jpeg" alt="">
+          <img src="images/copetineras_flor_sold.jpeg" alt="">
           <div class="details">
             <span class="title">4 Copetineras en Flor</span>
             <span class="info">Precio: <b><s>$ 3.000</s> VENDIDAS</b><br>
@@ -466,7 +466,7 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/bici_grande_1.jpeg" alt="">
+          <img src="images/bici_grande_1_sold.jpeg" alt="">
           <div class="details">
             <span class="title">Bicicleta Rodado 24 - Negra y Verde - Olmo Mint</span>
             <span class="info">Precio: <b><s>$ 50.000</s> VENDIDA</b><br>
