--- a/venta/index.html
+++ b/venta/index.html
@@ -171,6 +171,28 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
+          <img src="images/aspiradora.jpg" alt="">
+          <div class="details">
+            <span class="title">Aspiradora Electrolux - Lite 1 - 1600W</span>
+            <span class="info">Precio: <b>$ 18.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/plancha.jpg" alt="">
+          <div class="details">
+            <span class="title">Plancha Philco Seca 1200W (PSP1217N) - Casi sin uso</span>
+            <span class="info">Precio: <b>$ 5.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
           <img src="images/mesa_plegable.jpeg" alt="">
           <div class="details">
             <span class="title">Mesa Plegable Porta Laptop / Desayuno</span>
@@ -182,10 +204,32 @@
 
       <div class="tiles">
 	<a class="tile" href="#">
-          <img src="images/aspiradora.jpg" alt="">
+          <img src="images/comoda.jpg" alt="">
           <div class="details">
-            <span class="title">Aspiradora Electrolux - Lite 1 - 1600W</span>
-            <span class="info">Precio: <b>$ 18.000</b><br>
+            <span class="title">Comoda 125cm x 86cm x 48cm Negra</span>
+            <span class="info">Precio: <b>$ 20.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/cama_casa.jpg" alt="">
+          <div class="details">
+            <span class="title">Cama Casita Montesori + Colchón + sábanas</span>
+            <span class="info">Precio: <b>$ 15.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/estanteria_cars.jpg" alt="">
+          <div class="details">
+            <span class="title">Biblioteca - Estantería con cajonera - Cars</span>
+            <span class="info">Precio: <b>$ 6.000</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
@@ -372,6 +416,39 @@
           <div class="details">
             <span class="title">Set de Dips - Copetineros</span>
             <span class="info">Precio: <b>$ 2.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/casuelas_snacks.jpeg" alt="">
+          <div class="details">
+            <span class="title">Casuelas para Picada Snacks</span>
+            <span class="info">Precio: <b>$ 5.000</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/ensaladera_ceramica.jpeg" alt="">
+          <div class="details">
+            <span class="title">Ensaladera de Cerámica con Ribetes Plateados</span>
+            <span class="info">Precio: <b>$ 1.600</b><br>
+            Disponible: Inmediato</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="tiles">
+	<a class="tile" href="#">
+          <img src="images/ensaladera_vidrio.jpeg" alt="">
+          <div class="details">
+            <span class="title">Ensaladera de Vidrio</span>
+            <span class="info">Precio: <b>$ 1.400</b><br>
             Disponible: Inmediato</span>
           </div>
         </a>
